--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,93 +7,199 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.rosemberg.calculadorasimples.MainActivity">
+    tools:context="com.example.rosemberg.calculadorasimples.MainActivity"
+    android:padding="0dp"
+    android:background="#14e41f"
+    android:onClick="onClickNumber">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="250dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="1º Número"
-        android:id="@+id/txt1"
+        android:id="@+id/tela"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:textSize="30dp"
-        android:textColor="#000000" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="+"
-        android:id="@+id/textViewSoma"
-        android:textSize="30dp"
-        android:layout_alignTop="@+id/box1"
-        android:layout_centerHorizontal="true"
-        android:textColor="#000000" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="2º Número"
-        android:id="@+id/txt2"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:textSize="30dp"
-        android:textColor="#000000" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="number"
-        android:ems="10"
-        android:id="@+id/box1"
-        android:textColor="#000000"
-        android:layout_alignBottom="@+id/box2"
-        android:layout_alignEnd="@+id/txt1"
-        android:textSize="30dp" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="number"
-        android:ems="10"
-        android:id="@+id/box2"
-        android:textColor="#000000"
-        android:textSize="30dp"
-        android:layout_below="@+id/txt2"
-        android:layout_alignStart="@+id/txt2" />
+        android:background="#ffffff"
+        android:layout_margin="0dp"
+        android:textSize="70dp"
+        android:gravity="bottom|right" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Somar"
-        android:id="@+id/buttonSoma"
-        android:textColor="#000000"
-        android:textSize="20dp"
-        android:layout_below="@+id/box1"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Resultado:"
-        android:id="@+id/txt3"
-        android:textColor="#000000"
+        android:layout_width="103dp"
+        android:layout_height="102dp"
+        android:text="1"
+        android:id="@+id/btn1"
+        android:background="#222222"
         android:textSize="30dp"
-        android:layout_marginTop="42dp"
-        android:layout_below="@+id/buttonSoma"
-        android:layout_toStartOf="@+id/textViewSoma" />
+        android:textColor="#ffffff"
+        android:layout_below="@+id/tela"
+        android:layout_alignStart="@+id/tela"
+        android:nestedScrollingEnabled="false"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/box3"
-        android:layout_alignBottom="@+id/txt3"
-        android:layout_toEndOf="@+id/textViewSoma"
-        android:textColor="#000000"
-        android:textSize="30dp" />
+    <Button
+        android:layout_width="103dp"
+        android:layout_height="102dp"
+        android:text="2"
+        android:id="@+id/btn2"
+        android:background="#222222"
+        android:textSize="30dp"
+        android:textColor="#ffffff"
+        android:layout_alignTop="@+id/btn1"
+        android:layout_toEndOf="@+id/btn1" />
+
+    <Button
+        android:layout_width="103dp"
+        android:layout_height="102dp"
+        android:text="3"
+        android:id="@+id/btn3"
+        android:background="#222222"
+        android:textSize="30dp"
+        android:textColor="#ffffff"
+        android:layout_alignTop="@+id/btn2"
+        android:layout_toEndOf="@+id/btn2" />
+
+    <Button
+        android:layout_width="103dp"
+        android:layout_height="102dp"
+        android:text="+"
+        android:id="@+id/btnSum"
+        android:background="#222222"
+        android:textSize="30dp"
+        android:textColor="#ffffff"
+        android:layout_alignTop="@+id/btn3"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:layout_width="103dp"
+        android:layout_height="102dp"
+        android:text="4"
+        android:id="@+id/btn4"
+        android:background="#222222"
+        android:textSize="30dp"
+        android:textColor="#ffffff"
+        android:layout_below="@+id/btn1"
+        android:layout_alignStart="@+id/btn7" />
+
+    <Button
+        android:layout_width="103dp"
+        android:layout_height="102dp"
+        android:text="5"
+        android:id="@+id/btn5"
+        android:background="#222222"
+        android:textSize="30dp"
+        android:textColor="#ffffff"
+        android:layout_below="@+id/btn2"
+        android:layout_toStartOf="@+id/btn6" />
+
+    <Button
+        android:layout_width="103dp"
+        android:layout_height="102dp"
+        android:text="6"
+        android:id="@+id/btn6"
+        android:background="#222222"
+        android:textSize="30dp"
+        android:textColor="#ffffff"
+        android:layout_below="@+id/btn3"
+        android:layout_alignStart="@+id/btn9" />
+
+    <Button
+        android:layout_width="103dp"
+        android:layout_height="102dp"
+        android:text="-"
+        android:id="@+id/btnSub"
+        android:background="#222222"
+        android:textSize="30dp"
+        android:textColor="#ffffff"
+        android:layout_below="@+id/btn3"
+        android:layout_alignStart="@+id/btnMult" />
+
+    <Button
+        android:layout_width="103dp"
+        android:layout_height="102dp"
+        android:text="7"
+        android:id="@+id/btn7"
+        android:background="#222222"
+        android:textSize="30dp"
+        android:textColor="#ffffff"
+        android:layout_below="@+id/btn4"
+        android:layout_toStartOf="@+id/btn5" />
+
+    <Button
+        android:layout_width="103dp"
+        android:layout_height="102dp"
+        android:text="8"
+        android:id="@+id/btn8"
+        android:background="#222222"
+        android:textSize="30dp"
+        android:textColor="#ffffff"
+        android:layout_below="@+id/btn5"
+        android:layout_toStartOf="@+id/btn6" />
+
+    <Button
+        android:layout_width="103dp"
+        android:layout_height="102dp"
+        android:text="9"
+        android:id="@+id/btn9"
+        android:background="#222222"
+        android:textSize="30dp"
+        android:textColor="#ffffff"
+        android:layout_alignBottom="@+id/btn7"
+        android:layout_toStartOf="@+id/btnSub" />
+
+    <Button
+        android:layout_width="103dp"
+        android:layout_height="102dp"
+        android:text="x"
+        android:id="@+id/btnMult"
+        android:background="#222222"
+        android:textSize="25dp"
+        android:textColor="#ffffff"
+        android:layout_below="@+id/btnSub"
+        android:layout_alignEnd="@+id/tela" />
+
+    <Button
+        android:layout_width="103dp"
+        android:layout_height="103dp"
+        android:text="C"
+        android:id="@+id/btnC"
+        android:background="#222222"
+        android:textSize="30dp"
+        android:textColor="#ffffff"
+        android:nestedScrollingEnabled="false"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="103dp"
+        android:layout_height="103dp"
+        android:text="0"
+        android:id="@+id/btn0"
+        android:background="#222222"
+        android:textSize="30dp"
+        android:textColor="#ffffff"
+        android:layout_alignParentBottom="true"
+        android:layout_toEndOf="@+id/btnC" />
+
+    <Button
+        android:layout_width="103dp"
+        android:layout_height="103dp"
+        android:text="="
+        android:id="@+id/btnEqual"
+        android:background="#222222"
+        android:textSize="30dp"
+        android:textColor="#ffffff"
+        android:layout_alignTop="@+id/btnDiv"
+        android:layout_toStartOf="@+id/btnDiv" />
+
+    <Button
+        android:layout_width="103dp"
+        android:layout_height="103dp"
+        android:text="/"
+        android:id="@+id/btnDiv"
+        android:background="#222222"
+        android:textSize="30dp"
+        android:textColor="#ffffff"
+        android:layout_alignParentBottom="true"
+        android:layout_alignEnd="@+id/tela" />
 
 </RelativeLayout>
